2014-03-26  Julien Bect  <julien.bect@supelec.fr>

	Rename stk_config_graphicstoolkit tp graphics_toolkit.

	* config/stk_config_graphicstoolkit.m: Renamed.
	* misc/mole/graphics_toolkit/graphics_toolkit.m: Formerly known as
	stk_config_graphicstoolkit. Modified to be a (partial) replacement
	of the Octave function with the same name.
	* misc/mole/init.m: Add graphics_toolkit to the path only when
	needed, i.e., when using Matlab or an old version of Octave.
	* examples/03_miscellaneous/stk_example_misc02.m: Modified.

	stk_param_relik: Adding a little bit of noise to help chol succeed.

	* paramestim/stk_param_relik.m: Add a little bit of noise to help
	chol succeed, when the first factorization returned by chol is not
	complete. Emit a warning when doing so.
	* config/stk_config_setup.m: By default, hide the warning emitted
	by stk_param_relik.

2014-03-25  Julien Bect  <julien.bect@supelec.fr>

	stk_config_addpath: Add MOLE subdirectories to the path.

	* config/stk_config_addpath.m: modified

	stk_version: Simpler is better.

	* config/stk_version.m: Moved...
	* stk_version.m: ...here. STK's version number is now hard-coded
	in this file, and read from README anymore.
	* README: Refer to stk_version.m for the version number.
	* config/stk_config_path.m: Add STK's root to the path unless STK
	is used as an Octave package.
	* etc/RELEASE_CHECKLIST: Related changes.

	stk_config_getroot: Simpler is better.

	* config/stk_config_getroot.m: Simplify the way we locate STK's
	root. Use stk_param_relik instead of stk_test as a reference, as
	stk_test will probably not be included in the Octave package.
	* admin/make_octave_package.m: Modified.

	stk_make_htmldoc: Remove dependency on stk_config_getroot.

	* admin/stk_make_htmldoc.m: modified.

	stk_param_relik: Improved implementation, or so I hope.

	* paramestim/stk_param_relik.m: Several modifications, that seem
	to reduce the number of warnings related to bad conditioning, and