@@ -1,7 +1,4 @@
 % STK_CONFIG_PATH returns the searchpath of STK
-%
-% FIXME: missing doc
-%
 
 % Copyright Notice
 %
@@ -52,7 +49,6 @@ end
 
 % main function folders
 path = [path {...
-    fullfile(root, 'config'                     ) ...
     fullfile(root, 'core'                       ) ...
     fullfile(root, 'covfcs'                     ) ...
     fullfile(root, 'paramestim'                 ) ...
